[tool.poetry]
name = "songs"
version = "0.1.0"
description = ""
authors = ["Francesco Meli <francesco.meli@beefree.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
diskcache = "^5.6.3"
lyricsgenius = "^3.3.1"
weasyprint = "^65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
